// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default value constraints should process default constraints specified for parameters 1`] = `
"<div class="openapi">

# DefaultValueConstraints

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

### Query parameters

#|||
 **Name** 
|
 **Description** 
||

||
 limit 
|
 **Type:** number&lt;int32&gt;

Amount of search results to show<br><span class="openapi-description-annotation">Default:</span> \`10\` 
|||#

## Responses

<div class="openapi__response__code__204">

## 204 No Content

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;

exports[`Default value constraints should process default constraints specified in schema objects 1`] = `
"<div class="openapi">

# DefaultValueConstraints

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "role": "basic",
    "name": "Anonymous",
    "tags": [
        "blah"
    ],
    "age": 7
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 age 
|
 **Type:** number

<span class="openapi-description-annotation">Default:</span> \`7\` 
||

||
 name 
|
 **Type:** string

<span class="openapi-description-annotation">Default:</span> \`Anonymous\` 
||

||
 role 
|
 **Type:** string

Role for the user being created<br><span class="openapi-description-annotation">Default:</span> \`basic\`<br><span class="openapi-description-annotation">Enum:</span> \`basic\`, \`admin\` 
||

||
 tags 
|
 **Type:** string[]

<span class="openapi-description-annotation">Default:</span> \`blah\` 
|||#

</div>

## Responses

<div class="openapi__response__code__204">

## 204 No Content

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;
